links added, markdown left

--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
       <a
         href="https://github.com/ammarrqureshi/interactive-rating-page.git"
         target="_blank"
-        >View on Github</a
-      >. Coded by <a href="#">Ammar Qureshi</a>.
+        >View on Github</a><br> <br>
+        Coded by <a href="https://twitter.com/AmmarrQureshi">Ammar Qureshi</a>.
     </div>
   </body>
 </html>
