final commit before push

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
   </head>
   <body>
     <script type = "text/javascript" src="submit.js"></script> 
-
+    
     <div class="container">
+      <div class="bg-image"></div>
       <div class="rating-card">
 
 
